force-app/main/default/objects/Account/fields/AssignedFordDealer__c.field-meta.xml
<CustomField>
    <fullName>AssignedFordDealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Ford Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>