force-app/main/default/objects/Account/fields/AssignedFordUsedDealer__c.field-meta.xml
<CustomField>
    <fullName>AssignedFordUsedDealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Ford Dealer - Used</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Assigned Ford Dealer - Used)</relationshipLabel>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>