force-app/main/default/objects/Account/fields/AssignedLincolnDealer__c.field-meta.xml
<CustomField>
    <fullName>AssignedLincolnDealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Lincoln Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Assigned Lincoln Dealer)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>