force-app/main/default/objects/Account/fields/AssignedLincolnUsedDealer__c.field-meta.xml
<CustomField>
    <fullName>AssignedLincolnUsedDealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Lincoln Dealer - Used</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Assigned Lincoln Dealer - Used)</relationshipLabel>
    <relationshipName>Accounts5</relationshipName>
    <type>Lookup</type>
</CustomField>