force-app/main/default/objects/Account/fields/Backup_Sales_Representative__c.field-meta.xml
<CustomField>
    <fullName>Backup_Sales_Representative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Backup  Sales Representative</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Backup  Sales Representative)</relationshipLabel>
    <relationshipName>BackupSalesRepresentative</relationshipName>
    <type>Lookup</type>
</CustomField>