force-app/main/default/objects/Account/fields/BEVEnrollmentFlag__c.field-meta.xml
<CustomField>
    <fullName>BEVEnrollmentFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether Dealer is enrolled in BEV(Battery Electric Vehicles) for North America.Possible values - TRUE,FALSE or N/A</description>
    <label>BEV Enrollment Eligible</label>
    <type>Checkbox</type>
</CustomField>