force-app/main/default/objects/Account/fields/CartCheckoutReadyNA__c.field-meta.xml
<CustomField>
    <fullName>CartCheckoutReadyNA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether Dealer is eligible for NA(North America) Cart Checkout journey for ICE Vehicles.Possible values - TRUE,FALSE or N/A</description>
    <label>Cart Checkout Ready</label>
    <type>Checkbox</type>
</CustomField>