force-app/main/default/objects/Account/fields/ConsumerFleetFlag__c.field-meta.xml
<CustomField>
    <fullName>ConsumerFleetFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This customer fleet flag indicates that the customer (individual or business) owns at least one fleet or company-owned vehicle. The possible values are &quot;Y&quot; -- the customer owns at least one fleet or company owned vehicle, and &quot;N&quot; -- the customer doesnt own the above.</description>
    <label>Consumer Fleet Flag</label>
    <type>Checkbox</type>
</CustomField>