force-app/main/default/objects/Account/fields/ConsumerStatus__c.field-meta.xml
<CustomField>
    <fullName>ConsumerStatus__c</fullName>
    <label>Consumer Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>C</fullName>
                <label>Customer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>