force-app/main/default/objects/Account/fields/ConsumerVerificationDate__c.field-meta.xml
<CustomField>
    <fullName>ConsumerVerificationDate__c</fullName>
    <description>Date that shows when the consumer record</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Consumer Verification Date</label>
    <type>Date</type>
</CustomField>