force-app/main/default/objects/Account/fields/CurrentResidenceStartDate__c.field-meta.xml
<CustomField>
    <fullName>CurrentResidenceStartDate__c</fullName>
    <description>Date that the consumer began residing at their current residence.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Residence Start Date</label>
    <type>Date</type>
</CustomField>