force-app/main/default/objects/Account/fields/DeactivatedNA__c.field-meta.xml
<CustomField>
    <fullName>DeactivatedNA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will be TRUE if Dealer is not eligible for reservation,order and cart/checkout</description>
    <label>Not Eligible</label>
    <type>Checkbox</type>
</CustomField>