force-app/main/default/objects/Account/fields/DealerAdGroupCode__c.field-meta.xml
<CustomField>
    <fullName>DealerAdGroupCode__c</fullName>
    <description>The code used to uniquely identify a Dealer Advertising Group. DAG is a collection of SALES POINTs within a REGION for remittance of dealer advertising funds (FDAF, LMDA, etc)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer Ad Group Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>