force-app/main/default/objects/Account/fields/DealerAdGroupName__c.field-meta.xml
<CustomField>
    <fullName>DealerAdGroupName__c</fullName>
    <description>The name describing a Dealer Advertising Group. DAG is a collection of SALES POINTs within a REGION for remittance of dealer advertising funds (FDAF, LMDA, etc)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer Ad Group Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>