force-app/main/default/objects/Account/fields/DealerAssignedDMACode__c.field-meta.xml
<CustomField>
    <fullName>DealerAssignedDMACode__c</fullName>
    <description>Assigned dealer designated Market area code</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer Assigned DMA Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>