force-app/main/default/objects/Account/fields/DealerAssignedDMAName__c.field-meta.xml
<CustomField>
    <fullName>DealerAssignedDMAName__c</fullName>
    <description>Assigned dealer designated Market area name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer Assigned DMA Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>