force-app/main/default/objects/Account/fields/DealerAssignedFacingRegName__c.field-meta.xml
<CustomField>
    <fullName>DealerAssignedFacingRegName__c</fullName>
    <description>Assigned dealer facing region name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer Assigned Facing Reg Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>