force-app/main/default/objects/Account/fields/DealerBlackLabelInd__c.field-meta.xml
<CustomField>
    <fullName>DealerBlackLabelInd__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies whether the Dealer is a black label certified dealer or not.values will be Y or space.</description>
    <label>Black Label Indicator</label>
    <type>Checkbox</type>
</CustomField>