force-app/main/default/objects/Account/fields/DealerCmUSAflmActiveFlag__c.field-meta.xml
<CustomField>
    <fullName>DealerCmUSAflmActiveFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A flag used to identify USA dealers that meet the Campaign Management Active Dealer criteria.</description>
    <label>Dealer CM USA flm Active Flag</label>
    <type>Checkbox</type>
</CustomField>