force-app/main/default/objects/Account/fields/DealerCSDivisionMktCode__c.field-meta.xml
<CustomField>
    <fullName>DealerCSDivisionMktCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer Service Division Market Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>