force-app/main/default/objects/Account/fields/DealerCSDivisionMktName__c.field-meta.xml
<CustomField>
    <fullName>DealerCSDivisionMktName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer Service Division Market Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>