force-app/main/default/objects/Account/fields/DealerDistrictCode__c.field-meta.xml
<CustomField>
    <fullName>DealerDistrictCode__c</fullName>
    <description>Two character code that identifies the district the dealer belongs to.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer District Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>