force-app/main/default/objects/Account/fields/DealerDualIndicator__c.field-meta.xml
<CustomField>
    <fullName>DealerDualIndicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dual Dealer Indicator</label>
    <type>Checkbox</type>
</CustomField>