force-app/main/default/objects/Account/fields/DealerEliminationDate__c.field-meta.xml
<CustomField>
    <fullName>DealerEliminationDate__c</fullName>
    <description>Date that the dealership location was eliminated.    A dealership location (sales code) is eliminated when the decision is made to no longer have a dealership at that location.  In most cases, this occurs when the sales in that area are not deemed as high</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer Elimination Date</label>
    <type>Date</type>
</CustomField>