force-app/main/default/objects/Account/fields/DealerEliminationFlag__c.field-meta.xml
<CustomField>
    <fullName>DealerEliminationFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A flag indicating whether or not a dealership has been eliminated.    A dealership location (sales code) is eliminated when the decision is made to no longer have a dealership at that location.  In most cases, this occurs when the sales in that area are no</description>
    <label>Dealer Elimination Flag</label>
    <type>Checkbox</type>
</CustomField>