force-app/main/default/objects/Account/fields/DealerFCSDDistrictCode__c.field-meta.xml
<CustomField>
    <fullName>DealerFCSDDistrictCode__c</fullName>
    <description>FCSD District code</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer FCSD District Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>