force-app/main/default/objects/Account/fields/DealerFCSDFacingRegion__c.field-meta.xml
<CustomField>
    <fullName>DealerFCSDFacingRegion__c</fullName>
    <description>Code used to identify the first level grouping of dealers (region) within FCSD.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer FCSD Facing Region</label>
    <length>20</length>
    <type>Text</type>
</CustomField>