force-app/main/default/objects/Account/fields/DealerFCSDFacingRegionName__c.field-meta.xml
<CustomField>
    <fullName>DealerFCSDFacingRegionName__c</fullName>
    <description>Descriptive text to identify the first level grouping of dealers (region) within FCSD.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer FCSD Facing Region Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>