force-app/main/default/objects/Account/fields/DealerFCSDMarketCode__c.field-meta.xml
<CustomField>
    <fullName>DealerFCSDMarketCode__c</fullName>
    <description>Code used to identify the third level grouping of dealers within FCSD.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer FCSD Market Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>