force-app/main/default/objects/Account/fields/DealerFCSDMarketName__c.field-meta.xml
<CustomField>
    <fullName>DealerFCSDMarketName__c</fullName>
    <description>Descriptive text about the FCSD market.  The FCSD market is the third level grouping of dealers within FCSD.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer FCSD Market Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>