force-app/main/default/objects/Account/fields/DealerFCSDPartsZoneCode__c.field-meta.xml
<CustomField>
    <fullName>DealerFCSDPartsZoneCode__c</fullName>
    <description>FCSD parts zone code</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer FCSD Parts Zone Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>