force-app/main/default/objects/Account/fields/DealerFCSDRegionCode__c.field-meta.xml
<CustomField>
    <fullName>DealerFCSDRegionCode__c</fullName>
    <description>Code used to identify the first level grouping of dealers (region) within FCSD.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer FCSD Region Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>