force-app/main/default/objects/Account/fields/DealerFCSDRegionName__c.field-meta.xml
<CustomField>
    <fullName>DealerFCSDRegionName__c</fullName>
    <description>Descriptive text about the dealer region.  The dealer region is the first level grouping of dealers within FCSD.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer FCSD Region Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>