force-app/main/default/objects/Account/fields/DealerFCSDWholesaleZoneCode__c.field-meta.xml
<CustomField>
    <fullName>DealerFCSDWholesaleZoneCode__c</fullName>
    <description>FCSD wholesale zone code</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer FCSD Wholesale Zone Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>