force-app/main/default/objects/Account/fields/DealerFordFranchiseCode__c.field-meta.xml
<CustomField>
    <fullName>DealerFordFranchiseCode__c</fullName>
    <description>Code distinguishing the type of Ford dealer franchise (Ford or dual dealers only).  Examples: (F - Ford, A - Ford/Ford Truck, Q/C/U - Ford Specialty Truck)</description>
    <label>Dealer Ford Franchise Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Example A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>