force-app/main/default/objects/Account/fields/DealerFordFranchiseDescr__c.field-meta.xml
<CustomField>
    <fullName>DealerFordFranchiseDescr__c</fullName>
    <description>Ford dealer franchise (Ford or dual dealers only).  Examples: (Ford, Ford Truck)</description>
    <label>Dealer Ford Franchise Descr</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Example A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>