force-app/main/default/objects/Account/fields/DealerGeoSalesAreaCode__c.field-meta.xml
<CustomField>
    <fullName>DealerGeoSalesAreaCode__c</fullName>
    <description>The code used to identify the part of the world that is grouped together for reporting or to support organizational responsibility</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer Geo Sales Area Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>