force-app/main/default/objects/Account/fields/DealerGeoSalesAreaName__c.field-meta.xml
<CustomField>
    <fullName>DealerGeoSalesAreaName__c</fullName>
    <description>Name or description for the Geographic Sales Area Code in ENGLISH</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer Geo Sales Area Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>