force-app/main/default/objects/Account/fields/DealerKeyFormula__c.field-meta.xml
<CustomField>
    <fullName>DealerKeyFormula__c</fullName>
    <formula>IF( RecordType.Name = &apos;Dealer&apos;,ExternalId__c,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer Key</label>
    <type>Text</type>
</CustomField>