force-app/main/default/objects/Account/fields/DealerLnclMercuryFranchiseCode__c.field-meta.xml
<CustomField>
    <fullName>DealerLnclMercuryFranchiseCode__c</fullName>
    <description>Code distinguishing the type of Lincoln/Mercury dealer franchise (Lincoln/Mercury or dual dealers only).  Examples: (L - Lincoln, M - Mercury, A - Lincoln/Mercury)</description>
    <label>Dealer Lncl Mercury Franchise Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Example Q</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>