force-app/main/default/objects/Account/fields/DealerLnclMercuryFranchiseDescr__c.field-meta.xml
<CustomField>
    <fullName>DealerLnclMercuryFranchiseDescr__c</fullName>
    <description>Type of Lincoln/Mercury dealer franchise (Lincoln/Mercury or dual dealers only).  Examples: (Lincoln, Mercury, Lincoln/Mercury)</description>
    <label>Dealer Lncl Mercury Franchise Descr</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Example A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>