force-app/main/default/objects/Account/fields/DealerOtherPAAccountCode__c.field-meta.xml
<CustomField>
    <fullName>DealerOtherPAAccountCode__c</fullName>
    <description>This holds the primary PA Account code for auto collections rows that use a secondary code in the \&quot;Primary PA Account Code\&quot; field (i.e. for many of the auto collection dealership rows).  For all other rows, this field will be blank.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer Other PA Account Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>