force-app/main/default/objects/Account/fields/DealerOtherSalesCode__c.field-meta.xml
<CustomField>
    <fullName>DealerOtherSalesCode__c</fullName>
    <description>Additional sales code for a dealership.  For auto collection dealership rows with a secondary sales code in the \&quot;Primary Dealer Sales Code\&quot; field, this field will be populated with the Primary sales code for the overall auto collection. The other dealer sa</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer Other Sales Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>