force-app/main/default/objects/Account/fields/DealerPAAccCodeReasonCode__c.field-meta.xml
<CustomField>
    <fullName>DealerPAAccCodeReasonCode__c</fullName>
    <description>This code is used to identify why a Dealer PA Account Code was created.</description>
    <label>Dealer PA Acc Code Reason Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Example A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>