force-app/main/default/objects/Account/fields/DealerPAAccEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>DealerPAAccEffectiveDate__c</fullName>
    <description>Date that the Dealers parts and accessories account code was made effective.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer PA Acc Effective Date</label>
    <type>Date</type>
</CustomField>