force-app/main/default/objects/Account/fields/DealerPAAcctCodeReasonDescr__c.field-meta.xml
<CustomField>
    <fullName>DealerPAAcctCodeReasonDescr__c</fullName>
    <label>Dealer PA Acct Code Reason Descr</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Example A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>