force-app/main/default/objects/Account/fields/DealerPrimaryPAAccountCode__c.field-meta.xml
<CustomField>
    <fullName>DealerPrimaryPAAccountCode__c</fullName>
    <description>The PA Account Code is the Parts and Accessories account that the dealerships use to book their service to.  Dealers can have multiple PA Account codes (one primary and multiple secondaries).  For most dealerships, this fields holds the primary PA Account</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer Primary PA Account Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>