force-app/main/default/objects/Account/fields/DealerPrimarySalesCode__c.field-meta.xml
<CustomField>
    <fullName>DealerPrimarySalesCode__c</fullName>
    <description>The dealer sales code identifies a specific dealership location within a country, division and region.    Dealerships can have more than one sales code (one primary and multiple secondaries).  For most dealerships, this field holds the primary sales code.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer Primary Sales Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>