force-app/main/default/objects/Account/fields/DealerSalesAllignmentZoneCode__c.field-meta.xml
<CustomField>
    <fullName>DealerSalesAllignmentZoneCode__c</fullName>
    <description>Code used to identify the second level grouping of dealers within a division.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer Sales Allignment Zone Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>