force-app/main/default/objects/Account/fields/DealerSalesAreaCode__c.field-meta.xml
<CustomField>
    <fullName>DealerSalesAreaCode__c</fullName>
    <description>Dealer sales area code</description>
    <label>Dealer Sales Area Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Example A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>