force-app/main/default/objects/Account/fields/DealerSalesAreaName__c.field-meta.xml
<CustomField>
    <fullName>DealerSalesAreaName__c</fullName>
    <description>Dealer sales area name</description>
    <label>Dealer Sales Area Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Example A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>