force-app/main/default/objects/Account/fields/DealerSalesCodeReason__c.field-meta.xml
<CustomField>
    <fullName>DealerSalesCodeReason__c</fullName>
    <description>This code is used to identify why a Dealer Sales Code was created.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer Sales Code Reason</label>
    <length>20</length>
    <type>Text</type>
</CustomField>