force-app/main/default/objects/Account/fields/DealerSalesCodeReasonDescr__c.field-meta.xml
<CustomField>
    <fullName>DealerSalesCodeReasonDescr__c</fullName>
    <description>Textual description of the Sales Code Reason.  The Sales Code Reason is used to identify why a Dealer Sales Code was created.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer Sales Code Reason Descr</label>
    <length>50</length>
    <type>Text</type>
</CustomField>