force-app/main/default/objects/Account/fields/DealerSalesMktAreaCode__c.field-meta.xml
<CustomField>
    <fullName>DealerSalesMktAreaCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer Sales Mkt Area Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>