force-app/main/default/objects/Account/fields/DealerSalesMktAreaName__c.field-meta.xml
<CustomField>
    <fullName>DealerSalesMktAreaName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer Sales Mkt Area Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>