force-app/main/default/objects/Account/fields/DealerSalesRegionCode__c.field-meta.xml
<CustomField>
    <fullName>DealerSalesRegionCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer Sales Region Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>