force-app/main/default/objects/Account/fields/DealerSalesRegionName__c.field-meta.xml
<CustomField>
    <fullName>DealerSalesRegionName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer Sales Region Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>