force-app/main/default/objects/Account/fields/DealerSelectIndicator__c.field-meta.xml
<CustomField>
    <fullName>DealerSelectIndicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Select Dealer Indicator</label>
    <type>Checkbox</type>
</CustomField>