force-app/main/default/objects/Account/fields/DealerSubCode__c.field-meta.xml
<CustomField>
    <fullName>DealerSubCode__c</fullName>
    <description>Second level of identification for a dealership.  This field is currently used only for Jaguar and Ford of Europe.</description>
    <label>Dealer Sub Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Example A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>