force-app/main/default/objects/Account/fields/DealerTerminatedFlag__c.field-meta.xml
<CustomField>
    <fullName>DealerTerminatedFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dealer Terminated Flag</label>
    <type>Checkbox</type>
</CustomField>