force-app/main/default/objects/Account/fields/DealerTerminationDate__c.field-meta.xml
<CustomField>
    <fullName>DealerTerminationDate__c</fullName>
    <description>Date that the Dealer was terminated.  Termination relates to the owner of a dealer and the status of the dealership location.  A dealership is terminated when the current owner goes out of business.  This dealership is either sold to a new owner or held as</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer Termination Date</label>
    <type>Date</type>
</CustomField>