force-app/main/default/objects/Account/fields/DealerType__c.field-meta.xml
<CustomField>
    <fullName>DealerType__c</fullName>
    <label>Type of Dealer Sales Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ford</fullName>
            </value>
            <value>
                <fullName>Lincoln</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>