force-app/main/default/objects/Account/fields/DealerUDBServiceRecordFlag__c.field-meta.xml
<CustomField>
    <fullName>DealerUDBServiceRecordFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag identifies whether or not customer paid service records have been received for this dealer at some point in time. (Y/N)</description>
    <label>Dealer UDB Service Record Flag</label>
    <type>Checkbox</type>
</CustomField>