force-app/main/default/objects/Account/fields/DemographicKey__c.field-meta.xml
<CustomField>
    <fullName>DemographicKey__c</fullName>
    <description>Intelligent key used to distinguish a unique household.  (It consists of a concatenation of Household Matchkey 1, Country Code, and Postal Code - First Six Positions.)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Demographic Key</label>
    <length>30</length>
    <type>Text</type>
</CustomField>