force-app/main/default/objects/Account/fields/DigitalDads__c.field-meta.xml
<CustomField>
    <fullName>DigitalDads__c</fullName>
    <description>Digital Dads tend to be more tech-savvy and resourceful than their counterparts without children when it comes to online and mobile activities. Digital Dads indentifies a households likelihood to contain a Dad that is the Primary Decision Maker, frequently online, and a frequent social networkers. 1=Extremely Likely,2=Highly Likely,3=Very Likely,4=More than Likely,5=Likely,6=Somewhat Likely,7=Very Unlikely,8=Highly Unlikely,9=Extremely Unlikely,</description>
    <label>Digital Dads</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>