force-app/main/default/objects/Account/fields/DigitalMoms__c.field-meta.xml
<CustomField>
    <fullName>DigitalMoms__c</fullName>
    <description>Digital Moms tend to be more tech-savvy and resourceful than their counterparts without children when it comes to online and mobile activities. Digital Moms identifies a household&apos;s likelihood to contain a Mom that is frequently online, and a frequent social networker. 1=Extremely Likely,2=Highly Likely,3=Very Likely,4=More than Likely,5=Likely,6=Somewhat Likely,7=Very Unlikely,8=Highly Unlikely,9=Extremely Unlikely,</description>
    <label>Digital Moms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>