force-app/main/default/objects/Account/fields/DIY__c.field-meta.xml
<CustomField>
    <fullName>DIY__c</fullName>
    <description>Indicates households likelihood include do-it-yourselfers.  Based on the statistical analysis of consumers that have reported to work on DIY home improvement projects 1+ times per year. Values 1-99, 1=highest likelihood. Tier 1 (01-09) Top RankedTier 2 (10-19)Tier 3 (20-29)Tier 4 (30-39)Tier 5 (40-49)Tier 6 (50-59)Tier 7 (60-69)Tier 8 (70-79)Tier 9 (80-89)Tier10 (90-99) Bottom RankedValue 00, Unknown</description>
    <label>Do It Yourselfer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01-09</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>