force-app/main/default/objects/Account/fields/DonorVolunteer__c.field-meta.xml
<CustomField>
    <fullName>DonorVolunteer__c</fullName>
    <description>Indicates households likelihood to include charity volunteers. Based on the statistical analysis of consumers that have reported to volunteer time to charities. Values 1-99, 1=highest likelihood. Values 01-09, Top Ranked Values 10-19 Values 20-29 Values 30-39 Values 40-49 Values 50-59Values 60-69 Values 70-79 Values 80-89 Values 90-99, Bottom RankedValues 00, Unknown</description>
    <label>Donor Volunteer Score</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01-09</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>