force-app/main/default/objects/Account/fields/HHMatchKey1__c.field-meta.xml
<CustomField>
    <fullName>HHMatchKey1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Household Match Key 1</label>
    <length>20</length>
    <type>Text</type>
</CustomField>