force-app/main/default/objects/Account/fields/HHMatchKey2__c.field-meta.xml
<CustomField>
    <fullName>HHMatchKey2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Household Match Key 2</label>
    <length>5</length>
    <type>Text</type>
</CustomField>