force-app/main/default/objects/Account/fields/HouseholdVerificationDate__c.field-meta.xml
<CustomField>
    <fullName>HouseholdVerificationDate__c</fullName>
    <description>Date that shows when the household demographics record became effective.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Household Verification Date</label>
    <type>Date</type>
</CustomField>