force-app/main/default/objects/Account/fields/InactiveMerged__c.field-meta.xml
<CustomField>
    <fullName>InactiveMerged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inactive / Merged</label>
    <type>Checkbox</type>
</CustomField>