force-app/main/default/objects/Account/fields/LastUpdateDateTimeGCP__c.field-meta.xml
<CustomField>
    <fullName>LastUpdateDateTimeGCP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Update Date Time GCP</label>
    <type>DateTime</type>
</CustomField>