force-app/main/default/objects/Account/fields/LastUpdateDateTimeGCPFormula__c.field-meta.xml
<CustomField>
    <fullName>LastUpdateDateTimeGCPFormula__c</fullName>
    <formula>Text(DateValue(LastUpdateDateTimeGCP__c)) + &apos; &apos; + Text(TimeValue(LastUpdateDateTimeGCP__c - 7))</formula>
    <label>Last Update Date Time GCP</label>
    <type>Text</type>
</CustomField>