force-app/main/default/objects/Account/fields/MergedDateTime__c.field-meta.xml
<CustomField>
    <fullName>MergedDateTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Merged DateTime</label>
    <type>DateTime</type>
</CustomField>