force-app/main/default/objects/Account/fields/OrderReadyNA__c.field-meta.xml
<CustomField>
    <fullName>OrderReadyNA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether Dealer is eligible for NA(North America) Order journey.Possible values - TRUE,FALSE or N/A</description>
    <label>Order Ready</label>
    <type>Checkbox</type>
</CustomField>